tests/Driver/verify.sora
// RUN: sorac -verify %s 2>&1 | FileCheck %s

// CHECK: :[[@LINE+1]]:12: error: expected '-'
// expect-1

// CHECK: :[[@LINE+1]]:11: error: expected number, 'remark', 'note', 'warning' or 'error'
// expect-cat

// CHECK: :[[@LINE+1]]:17: error: expected '+' or '-'
// expect-error@

// CHECK: :[[@LINE+1]]:18: error: offset number can't be zero
// expect-error@+0

// CHECK: :[[@LINE+1]]:18: error: offset number can't be zero
// expect-error@-0

// CHECK: :[[@LINE+1]]:16: error: expected ':' or '@'
// expect-error

// CHECK: :[[@LINE+1]]:4: error: cannot expect a diagnostic at a negative line number
// expect-error@-30: foobar

// CHECK: :[[@LINE+1]]:4: error: cannot expect a diagnostic at line 0
// expect-error@-25: foobar

// CHECK: :[[@LINE+1]]:4: error: expected diagnostic count must be greater than 1
// expect-1-error: foobar

// CHECK: :[[@LINE+1]]:4: error: expected diagnostic count must be greater than 1
// expect-0-error: foobar

// CHECK: :[[@LINE+1]]:4: error: diagnostic is expected at line 59 but the file's last line is line 35
// expect-error@+25: foobar
